resolve css issue for Workflow table, word wrap for workflow content for dsar-requestdetails

--- a/src/app/privacy/dsar/workflows/workflows.component.scss
+++ b/src/app/privacy/dsar/workflows/workflows.component.scss
@@ -142,6 +142,12 @@ table.table.table-bordered > tbody > tr > td:first-child {
   text-decoration: underline;
 }
 
+
+::ng-deep .workflow-primeng-wrapper .p-datatable .p-datatable-thead > tr > th:first-child {
+  width: auto;
+}
+
+
 // ::ng-deep .p-datatable .p-sortable-column:not(.p-highlight):hover .p-sortable-column-icon {
 //   color:#fff;
 // }
